crates/codegen/tests/snapshots/integration_test__v2_dynamic.snap
---
source: crates/codegen/tests/integration_test.rs
expression: wat
---
(module
  (type (;0;) (func))
  (type (;1;) (func (param i32 i32)))
  (type (;2;) (func (param i32 i32 i32 i32)))
  (type (;3;) (func (param i32 i32 i32 i32) (result i32)))
  (import "javy_quickjs_provider_v2" "canonical_abi_realloc" (func (;0;) (type 3)))
  (import "javy_quickjs_provider_v2" "eval_bytecode" (func (;1;) (type 1)))
  (import "javy_quickjs_provider_v2" "invoke" (func (;2;) (type 2)))
  (import "javy_quickjs_provider_v2" "memory" (memory (;0;) 0))
  (export "_start" (func 5))
  (export "log" (func 3))
  (export "log2" (func 4))
  (func (;3;) (type 0)
    (local i32 i32)
    i32.const 0
    i32.const 0
    i32.const 1
    i32.const 296
    call 0
    local.tee 0
    i32.const 0
    i32.const 296
    memory.init 0
    data.drop 0
    i32.const 0
    i32.const 0
    i32.const 1
    i32.const 3
    call 0
    local.tee 1
    i32.const 0
    i32.const 3
    memory.init 1
    data.drop 1
    local.get 0
    i32.const 296
    local.get 1
    i32.const 3
    call 2
  )
  (func (;4;) (type 0)
    (local i32 i32)
    i32.const 0
    i32.const 0
    i32.const 1
    i32.const 296
    call 0
    local.tee 0
    i32.const 0
    i32.const 296
    memory.init 0
    data.drop 0
    i32.const 0
    i32.const 0
    i32.const 1
    i32.const 4
    call 0
    local.tee 1
    i32.const 0
    i32.const 4
    memory.init 2
    data.drop 2
    local.get 0
    i32.const 296
    local.get 1
    i32.const 4
    call 2
  )
  (func (;5;) (type 0)
    (local i32)
    i32.const 0
    i32.const 0
    i32.const 1
    i32.const 296
    call 0
    local.tee 0
    i32.const 0
    i32.const 296
    memory.init 0
    local.get 0
    i32.const 296
    call 1
  )
  (data (;0;) "C\07\18function.mjs\06log\08log2\0econsole4Hello from top-level scope(Hello from function!*Hello from function2!\0d\c8\03\00\02\00\00\ca\03\00\01\cc\03\00\00\00\0c \06\01\a4\01\00\00\00\03\02\02\1f\00\ca\03\00\01\cc\03\01\01\08\ec\08\c2\00\e3\c2\01\e4)8\e7\00\00\00B\e5\00\00\00\04\e8\00\00\00$\01\00\0e\06.\c8\03\01\04\01\00\0a\12\00\09\00\0f\10\00\05\08\00\05\07\0cC\06\01\ca\03\00\00\00\03\00\00\13\008\e7\00\00\00B\e5\00\00\00\04\e9\00\00\00$\01\00)\c8\03\01\02\03]\07\0c\00\00\05\00\05\10\00\05\08\00\05\07\0cC\06\01\cc\03\00\00\00\03\00\00\13\008\e7\00\00\00B\e5\00\00\00\04\ea\00\00\00$\01\00)\c8\03\05\02\03]\07\0c\00\00\05\00\05\10\00\05\08\00\05\07")
  (data (;1;) "log")
  (data (;2;) "log2")
  (@producers
    (language "JavaScript" "ES2020")
    (processed-by "Javy" "2.0.0-alpha.1")
  )
  (@custom "javy_source" (after data) "export function log() {\0a    console.log(\22Hello from function!\22);\0a}\0a\0aexport function log2() {\0a    console.log(\22Hello from function2!\22);\0a}\0a\0aconsole.log(\22Hello from top-level scope\22);\0a")
)
